--- a/fastjson-1.2.37/pom.xml
+++ b/fastjson-1.2.37/pom.xml
@@ -30,16 +30,16 @@
 
     <groupId>org.apache.servicemix.bundles</groupId>
     <artifactId>org.apache.servicemix.bundles.fastjson</artifactId>
-    <version>1.2.37_1</version>
+    <version>1.2.37_1.tesb1</version>
     <packaging>bundle</packaging>
     <name>Apache ServiceMix :: Bundles :: ${pkgArtifactId}</name>
     <description>This OSGi bundle wraps ${pkgArtifactId} ${pkgVersion} jar file.</description>
 
     <scm>
-        <connection>scm:git:https://git-wip-us.apache.org/repos/asf/servicemix-bundles.git</connection>
-        <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/servicemix-bundles.git</developerConnection>
-        <url>https://git-wip-us.apache.org/repos/asf?p=servicemix-bundles.git</url>
-      <tag>org.apache.servicemix.bundles.fastjson-1.2.37_1</tag>
+        <connection>scm:git:https://github.com/Talend/servicemix-bundles.git</connection>
+        <developerConnection>scm:git:https://github.com/Talend/servicemix-bundles.git</developerConnection>
+        <url>https://github.com/Talend/servicemix-bundles.git</url>
+      <tag>org.apache.servicemix.bundles.fastjson-1.2.37_1.tesb1</tag>
   </scm>
 
     <properties>
@@ -111,6 +111,7 @@
                        <Export-Package>${servicemix.osgi.export}</Export-Package>
                        <Import-Package>${servicemix.osgi.import.pkg}</Import-Package>
                        <Bundle-NativeCode>*</Bundle-NativeCode>
+                       <_removeheaders>Ignore-Package,Include-Resource,Private-Package,Embed-Dependency,Bundle-NativeCode</_removeheaders>
                    </instructions>
                 </configuration>
             </plugin>
