--- a/spring-context-5.1.14.RELEASE/pom.xml
+++ b/spring-context-5.1.14.RELEASE/pom.xml
@@ -30,18 +30,19 @@
 
     <groupId>org.apache.servicemix.bundles</groupId>
     <artifactId>org.apache.servicemix.bundles.spring-context</artifactId>
-    <version>5.1.14.RELEASE_1</version>
+    <version>5.1.14.RELEASE_1.tesb1</version>
     <packaging>bundle</packaging>
     <name>Apache ServiceMix :: Bundles :: ${pkgArtifactId}</name>
 
     <scm>
-        <connection>scm:git:https://gitbox.apache.org/repos/asf/servicemix-bundles.git</connection>
-        <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/servicemix-bundles.git</developerConnection>
-        <url>https://gitbox.apache.org/repos/asf?p=servicemix-bundles.git</url>
-    <tag>org.apache.servicemix.bundles.spring-context-5.1.14.RELEASE_1</tag>
+        <connection>scm:git:https://github.com/Talend/servicemix-bundles.git</connection>
+        <developerConnection>scm:git:https://github.com/Talend/servicemix-bundles.git</developerConnection>
+        <url>https://github.com/Talend/servicemix-bundles.git</url>
+    <tag>HEAD</tag>
   </scm>
 
     <properties>
+        <upstream.version>5.1.14.RELEASE_1</upstream.version>
         <pkgGroupId>org.springframework</pkgGroupId>
         <pkgArtifactId>spring-context</pkgArtifactId>
         <pkgVersion>5.1.14.RELEASE</pkgVersion>
@@ -71,14 +72,14 @@
             javax.persistence.spi;resolution:=optional,
             javax.rmi;resolution:=optional,
             javax.script;resolution:=optional,
-            javax.validation;resolution:=optional,
-            javax.validation.bootstrap;resolution:=optional,
-            javax.validation.constraints;resolution:=optional,
-            javax.validation.constraintvalidation;resolution:=optional,
-            javax.validation.executable;resolution:=optional,
-            javax.validation.groups;resolution:=optional,
-            javax.validation.metadata;resolution:=optional,
-            javax.validation.spi;resolution:=optional,
+            javax.validation;version="[1.1,2)";resolution:=optional,
+            javax.validation.bootstrap;version="[1.1,2)";resolution:=optional,
+            javax.validation.constraints;version="[1.1,2)";resolution:=optional,
+            javax.validation.constraintvalidation;version="[1.1,2)";resolution:=optional,
+            javax.validation.executable;version="[1.1,2)";resolution:=optional,
+            javax.validation.groups;version="[1.1,2)";resolution:=optional,
+            javax.validation.metadata;version="[1.1,2)";resolution:=optional,
+            javax.validation.spi;version="[1.1,2)";resolution:=optional,
             javax.xml.namespace;resolution:=optional,
             javax.xml.ws;resolution:=optional,
             org.aopalliance.aop;version="[1,2)";resolution:=optional,
@@ -211,7 +212,43 @@
     </dependencies>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>io.paradoxical</groupId>
+                    <artifactId>resolved-pom-maven-plugin</artifactId>
+                    <version>1.0</version>
+                    <configuration>
+                        <properties>
+                            <revision>${revision}</revision>
+                            <upstream.version>${upstream.version}</upstream.version>
+
+                            <!-- ADD HERE ALL THE CUSTOM PROPERTIES declared in the above <properties> part -->
+                            <!-- something like :
+                            <my.custom.property>${my.custom.property}</my.custom.property>
+                            -->
+                        </properties>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>resolve-my-pom</id>
+                            <phase>initialize</phase>
+                            <goals>
+                                <goal>resolve-pom</goal>
+                            </goals>
+                            <configuration>
+                                <resolvedPomFile>.resolved-pom.xml</resolvedPomFile>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
+            <plugin>
+                <groupId>io.paradoxical</groupId>
+                <artifactId>resolved-pom-maven-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
