--- a/spring-context-5.1.14.RELEASE/pom.xml
+++ b/spring-context-5.1.14.RELEASE/pom.xml
@@ -65,7 +65,7 @@
             javax.management.modelmbean;resolution:=optional,
             javax.management.openmbean;resolution:=optional,
             javax.management.remote;resolution:=optional,
-            javax.money;resolution:=optional, 
+            javax.money;resolution:=optional,
             javax.money.format;resolution:=optional,
             javax.naming;resolution:=optional,
             javax.persistence;resolution:=optional,
@@ -248,6 +248,17 @@
             <plugin>
                 <groupId>io.paradoxical</groupId>
                 <artifactId>resolved-pom-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <executions>
+                    <execution>
+                        <!-- override the default-deploy to avoid deployment in apache nexus-->
+                        <id>default-deploy</id>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
